--- a/src/app/card-scelta/card-scelta.component.css
+++ b/src/app/card-scelta/card-scelta.component.css
@@ -9,3 +9,9 @@
     border-radius: 20px;
     cursor: pointer;
 }
+
+@media screen and (max-width: 600px) {
+    .scelta {
+        font-size: var(--mb-fstesto);
+    }
+}
