--- a/src/app/risultati/risultati.component.html
+++ b/src/app/risultati/risultati.component.html
@@ -11,5 +11,5 @@
         </ul>
     </div>
     <button class="risultati__bottone" (click)="nuovaPartita()">Nuova partita</button>
-    Sound Effect from <a href="https://pixabay.com/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=61070">Pixabay</a>
+    <p>Sound Effect from <a href="https://pixabay.com/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=61070">Pixabay</a></p>
 </div>
