--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,3 +12,9 @@ header{
     margin: 0 auto;
     text-align: center;
 }
+
+@media screen and (max-width: 600px) {
+    header {
+        font-size: var(--mb-fstitolo);
+    }
+}
